Update some typos

--- a/dualboot/first-boot.html
+++ b/dualboot/first-boot.html
@@ -29,7 +29,7 @@
 
 	Send the kernelcache:
 	<h3>If you're generating keybags, send the patched kernelcache so that fixkeybag can run:</h3>
-	<p class="cli">irecovery -f kernelcacheramdisk.img4</p>
+	<p class="cli">irecovery -f kernelcache.ramdisk.img4</p>
 	<h3>Otherwise, you can send the unpatched kernelcache:</h3>
 	<p class="cli">irecovery -f kernelcache.img4</p>
 
