--- a/dualboot/ramdisk-boot.html
+++ b/dualboot/ramdisk-boot.html
@@ -18,7 +18,7 @@
 	<p>Send iBSS, along with iBEC:<p>
 	<p class="cli">irecovery -f iBSS.img4</p>
 	<p><b>Note: If no output is given after running this command, run the command again one more time.</b><p></p>
-	<p class="cli">irecovery -f iBECRamdisk.img4</p>
+	<p class="cli">irecovery -f iBEC.ramdisk.img4</p>
 
 	<p><b>Note for A10 and newer devices ONLY: Apple unified all iBoot images and as a result booting iBEC is slightly different.</b><p>
 	<p>After sending iBSS, the device will already be in recovery. in order to boot iBEC from iBSS, we must send the go command from iBSS recovery mode.
@@ -38,7 +38,7 @@
 	<p class="cli">irecovery -c firmware</p>
 
 	Send the booted kernelcache and boot into the ramdisk:
-	<p class="cli">irecovery -f kernelcacheramdisk.img4</p>
+	<p class="cli">irecovery -f kernelcache.ramdisk.img4</p>
 	<p class="cli">irecovery -c bootx</p>
 
 
