Fix booting patched kernel on A10/A11

--- a/dualboot/making-ramdisk.html
+++ b/dualboot/making-ramdisk.html
@@ -70,7 +70,7 @@
     <p class="cli">pyimg4 img4 create -p kernelcache.ramdisk.im4p -m IM4M -o kernelcache.ramdisk.img4</p>
 
     <h4>A10-A11</h4>
-    <p class="cli">pyimg4 im4p create -i kcache.patched -o kernelcache.ramdisk.im4p -f rkrn --lzfse</p>
+    <p class="cli">pyimg4 im4p create -i kcache.patched -o kernelcache.ramdisk.im4p -f rkrn --lzss</p>
     <p class="cli">pyimg4 img4 create -p kernelcache.ramdisk.im4p -m IM4M -o kernelcache.ramdisk.img4</p>
 
     <center>Next part → <a href="ramdisk-boot.html" class="link"></b>Ramdisk Boot<a></center></br>
