--- a/dualboot/index.html
+++ b/dualboot/index.html
@@ -26,7 +26,7 @@
     <h2>Contents:</h2>
 	<h2><a href="requirements.html" class="link"></b>Requirements</a></br>
     <a href="partitioning.html" class="link"></b> Partitioning and Restoring RootFS</a></br>
-    <a href="patching_bootchain.html" class="link"></b>Patching Bootchain</a></br>	
+    <a href="patching-bootchain.html" class="link"></b>Patching Bootchain</a></br>	
     <a href="making-ramdisk.html" class="link"></b>Making custom ramdisk</a></br>
 	<a href="ramdisk-boot.html" class="link"></b>Ramdisk Boot</a></br>
     <a href="modifying-filesystem.html" class="link"></b>Modifying filesystem partition</a></br>
